# numpy2tfrecord

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
numpy2tfrecord/: __init__.py  core.py
tests/: test_core.py
