[metadata]
name = numpy2tfrecord
version = attr: numpy2tfrecord.__version__
description = Convert a collection of numpy data to tfrecord
long_description = file: README.md
keywords = numpy, tfrecord, tensorflow
author = Ryo Yonetani
author_email = yonetani.vision@gmail.com
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    numpy
    tensorflow