[metadata]
name = numpy2tfrecord
version = 0.0.2
description = Convert a collection of numpy data to tfrecord
long_description_content_type = text/markdown
long_description = file: README.md
url=https://github.com/yonetaniryo/numpy2tfrecord
keywords = numpy, tfrecord, tensorflow
author = Ryo Yonetani
author_email = yonetani.vision@gmail.com
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    numpy
    tensorflow